--- a/index.html
+++ b/index.html
@@ -18,18 +18,38 @@
         <!-- <img id="menuBurger" src="assets/images/menu.svg" alt="" /> -->
         <input id="searchLocation" type="text" placeholder="Search Location..."/>
       </div>
+      <nav>
+        <p class="nav" id="positionWheater">Location</p>
+        <p class="nav" id="worldWheater">world</p>
+      </nav>
     </header>
 
     <main>
       <section>
-        <h1 class="town">Vancouver, CA</h1>
-        <h3 class="date">Monday, April 26 ,2022</h3>
-        <h2 class="degree">16°c</h2>
-        <p>----------</p>
-        <h3 class="wheater">Bronken clouds</h3>
-        <h3 class="min-max">17/9°C</h3>
+        <h1 id="town">Vancouver, CA</h1>
+        <h3 id="date">Monday, April 26 ,2022</h3>
+        <h2 id="degree">16°c</h2>
+        <img id="icon" src="assets/images/icon/cloudy.png" alt="">
+        <h3 id="wheater">Bronken clouds</h3>
+        <h3 id="min-max">17/9°C</h3>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+        <!-- <div class="one forcast">
+            <img src="assets/images/icon/cloudy-clear.png" alt="">
+            <p>12/8°C</p>
+            <p>Tuesday</p>
+        </div>
+        <div class="two forcast">
+            <img src="assets/images/icon/rain.png" alt="">
+            <p>13/7°C</p>
+            <p>Wednesday</p>
+        </div>
+        <div class="three forcast">
+            <img src="assets/images/icon/Sunny.png" alt="">
+            <p>12/9°C</p>
+            <p>Thursday</p>
+        </div> -->
+    </footer>
   </body>
 </html>
