js- add in fetchQuotes forcast 3days

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <h1 id="town">Vancouver, CA</h1>
         <h3 id="date">Monday, April 26 ,2022</h3>
         <h2 id="degree">16°c</h2>
-        <img id="icon" src="assets/images/icon/cloudy.png" alt="">
+        <img id="icon" src="assets/images/icon/Clouds.png" alt="">
         <h3 id="wheater">Bronken clouds</h3>
         <h3 id="min-max">17/9°C</h3>
       </section>
     </main>
     <footer>
-        <!-- <div class="one forcast">
+        <div class="one forcast">
             <img src="assets/images/icon/cloudy-clear.png" alt="">
             <p>12/8°C</p>
             <p>Tuesday</p>
@@ -49,7 +49,7 @@
             <img src="assets/images/icon/Sunny.png" alt="">
             <p>12/9°C</p>
             <p>Thursday</p>
-        </div> -->
+        </div>
     </footer>
   </body>
 </html>
