js- menu autocomplete work in progress

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   </head>
   <body>
     <header>
-      <div>
-        <!-- <img id="menuBurger" src="assets/images/menu.svg" alt="" /> -->
+      <div id="searchBar">
         <input id="searchLocation" type="text" placeholder="Search Location..."/>
       </div>
       <nav>
