js- finish menu autocomplete, finish background random of city, start forcast footer

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <header>
       <div id="searchBar">
         <input id="searchLocation" type="text" placeholder="Search Location..."/>
+        <div id="divCountry">
+          <ul id="countryList">
+          </ul>
+        </div>
       </div>
       <nav>
         <p class="nav" id="positionWheater">Location</p>
@@ -25,30 +29,30 @@
 
     <main>
       <section>
-        <h1 id="town">Vancouver, CA</h1>
-        <h3 id="date">Monday, April 26 ,2022</h3>
-        <h2 id="degree">16°c</h2>
-        <img id="icon" src="assets/images/icon/Clouds.png" alt="">
-        <h3 id="wheater">Bronken clouds</h3>
-        <h3 id="min-max">17/9°C</h3>
+        <h1 id="town"></h1>
+        <h3 id="date"></h3>
+        <h2 id="degree"></h2>
+        <img id="icon" src="" alt="">
+        <h3 id="wheater"></h3>
+        <h3 id="min-max"></h3>
       </section>
     </main>
     <footer>
-        <div class="one forcast">
-            <img src="assets/images/icon/cloudy-clear.png" alt="">
-            <p>12/8°C</p>
-            <p>Tuesday</p>
+        <div class="forcast">
+            <img id="forcast__img0" src="" alt="">
+            <p id="forcast__minMax0"></p>
+            <p id="forcast__day0"></p>
         </div>
-        <div class="two forcast">
-            <img src="assets/images/icon/rain.png" alt="">
-            <p>13/7°C</p>
-            <p>Wednesday</p>
-        </div>
-        <div class="three forcast">
-            <img src="assets/images/icon/Sunny.png" alt="">
-            <p>12/9°C</p>
-            <p>Thursday</p>
-        </div>
+        <div class="forcast">
+          <img id="forcast__img1" src="" alt="">
+          <p id="forcast__minMax1"></p>
+          <p id="forcast__day1"></p>
+      </div>
+      <div class="forcast">
+        <img id="forcast__img2" src="" alt="">
+        <p id="forcast__minMax2"></p>
+        <p id="forcast__day2"></p>
+    </div>
     </footer>
   </body>
 </html>
