js- refactor and import/export module

--- a/index.html
+++ b/index.html
@@ -44,24 +44,6 @@
         <h3 id="min-max"></h3>
       </section>
     </main>
-    <footer id="footer__forcast">
-      <section>
-        <div class="forcast">
-          <img id="forcast__img0" src="" alt="" />
-          <p id="forcast__minMax0"></p>
-          <p id="forcast__day0"></p>
-        </div>
-        <div class="forcast">
-          <img id="forcast__img1" src="" alt="" />
-          <p id="forcast__minMax1"></p>
-          <p id="forcast__day1"></p>
-        </div>
-        <div class="forcast">
-          <img id="forcast__img2" src="" alt="" />
-          <p id="forcast__minMax2"></p>
-          <p id="forcast__day2"></p>
-        </div>
-      </section>
-    </footer>
+    <footer id="footer__forcast"></footer>
   </body>
 </html>
