--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="assets/js/index.js" type="module" defer></script>
+    <script src="assets/js/index.js" type="module"></script>
     <title>Wheater App</title>
   </head>
   <body>
